Refactored step 4 5 to use tree sitter library for parsing